feat: カレンダー作成モーダルのフォーム部分を作成

--- a/src/styles/output.css
+++ b/src/styles/output.css
@@ -660,6 +660,14 @@ video {
   width: 100%;
 }
 
+.w-\[100\%\] {
+  width: 100%;
+}
+
+.w-\[30\%\] {
+  width: 30%;
+}
+
 .table-fixed {
   table-layout: fixed;
 }
@@ -698,6 +706,10 @@ video {
 
 .gap-5 {
   gap: 1.25rem;
+}
+
+.gap-8 {
+  gap: 2rem;
 }
 
 .rounded-full {
